--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <meta charset="utf-8"/>
     <script src="script.js"></script>
-    <body style="text-align: center" onload="init()">
+    <body style="text-align: center">
         <div style="width: 510px; padding: 10px; margin: auto; border: 1px solid black; text-align: center">
             <button style="width: 50%" onclick="getNewNum()">Новое число</button>
             <input id="num" width="100" contenteditable="false"/>
