--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
     <script src="script.js"></script>
     <body style="text-align: center">
         <div style="width: 510px; padding: 10px; margin: auto; border: 1px solid black; text-align: center">
-            <button style="width: 50%" onclick="getNewNum()">Новое число</button>
-            <input id="num" width="100" contenteditable="false"/>
+            <div style="padding: 5px">
+                <button style="width: 50%" onclick="getNewNum()">Новое число</button>
+                <input id="num" width="100" contenteditable="false"/>
+            </div>
             <br></br>
-            <button style="width: 50%" onclick="getNums()">Множество чисел</button>
-            <input id="len" width="100" type="number"/>
+            <div style="padding: 5px">
+                <button style="width: 50%" onclick="getNums()">Множество чисел</button>
+                <input id="len" width="100" type="number"/>
+            </div>
             <br></br>
             <textarea id="set" style="width: 100%" contenteditable="false"></textarea>
         </div>
