--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
                 <input id="len" width="100" type="number"/>
             </div>
             <br></br>
-            <textarea id="set" style="width: 100%" contenteditable="false"></textarea>
+            <div style="padding: 5px">
+                <textarea id="set" style="width: 100%" contenteditable="false"></textarea>
+            </div>
         </div>
     </body>
 </html>
