--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
                 <button style="width: 50%" onclick="getNums()">Множество чисел</button>
                 <input id="len" width="100" type="number"/>
             </div>
-            <div style="padding: 2px">
-                <textarea id="set" style="width: 95%" contenteditable="false"></textarea>
+            <br></br>
+            <div>
+                <textarea id="set" style="width: 96%" contenteditable="false"></textarea>
             </div>
         </div>
     </body>
