--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8"/>
     <script src="script.js"></script>
     <body style="text-align: center">
-        <div style="width: 510px; padding: 10px; margin: auto; border: 1px solid black; text-align: center">
+        <div style="width: 510px; padding: 10px; margin: auto; border: 1px solid black">
             <div style="padding: 5px">
                 <button style="width: 50%" onclick="getNewNum()">Новое число</button>
                 <input id="num" width="100" contenteditable="false"/>
