--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <meta charset="utf-8"/>
     <script src="script.js"></script>
-    <body style="text-align: center">
+    <body>
         <div style="width: 510px; padding: 10px; margin: auto; border: 1px solid black">
             <div style="padding: 5px">
                 <button style="width: 50%" onclick="getNewNum()">Новое число</button>
