--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <script src="script.js"></script>
     <body>
         <div style="width: 510px; padding: 10px; margin: auto; border: 1px solid black">
-            <div style="padding: 5px">
+            <div>
                 <div>
                     <button style="width: 50%" onclick="getNewNum()">Новое число</button>
                     <input id="num" width="100" contenteditable="false"/>
                 </div>
-                <div style="padding: 5px">
+                <div>
                     <button style="width: 50%" onclick="getNums()">Множество чисел</button>
                     <input id="len" width="100" type="number"/>
                 </div>
