--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <div style="width: 510px; padding: 10px; margin: auto; border: 1px solid black">
             <div>
                 <div>
-                    <button style="width: 50%" onclick="getNewNum()">Новое число</button>
+                    <button style="width: 170px" onclick="getNewNum()">Новое число</button>
                     <input id="num" width="100" contenteditable="false"/>
                 </div>
                 <div>
-                    <button style="width: 50%" onclick="getNums()">Множество чисел</button>
+                    <button style="width: 170px" onclick="getNums()">Множество чисел</button>
                     <input id="len" width="100" type="number"/>
                 </div>
                 <br></br>
