--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
     <meta charset="utf-8"/>
     <script src="script.js"></script>
-    <body>
-        <div style="width: 510px; padding: 10px; margin: auto; border: 1px solid black">
+    <body onload="init()">
+        <div style="width: 510px; padding: 20px; margin: auto; border: 1px solid black">
             <div>
                 <div>
                     <button style="width: 170px" onclick="getNewNum()">Новое число</button>
