--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
         function goPython(){
             $.ajax({
-              url: "start.py",
+              url: "bot/start.py",
              context: document.body
             }).done(function() {
              console.log('finished python script');;
