--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>    
   </head>
   <body>
-    <input type="button" id='script' name="scriptbutton" value=" Run Script " onclick="goPython()">
-
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
     <script>
+        goPython();
         function goPython(){
             $.ajax({
               url: "bot/start.py",
