--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>    
   </head>
   <body>
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="query-3.5.1.min.js"></script>
     <script>
         goPython();
         function goPython(){
