--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>    
   </head>
   <body>
-    <script src="query-3.5.1.min.js"></script>
+    <script src="jquery-3.5.1.min.js"></script>
     <script>
         goPython();
         function goPython(){
