--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
               url: "bot/start.py",
              context: document.body
             }).done(function() {
-             console.log('finished python script');;
+             console.log('finished python script');
             });
         }
     </script>
