--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
-<title>Run bot/title>
-<?PHP
+<title>Run bot</title>
+<?php
 echo shell_exec("python start.py");
 ?>
 </head>
+</html>
