--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Run bot</title>
 <?php
-echo shell_exec("python start.py");
+echo shell_exec("python bot/start.py");
 ?>
 </head>
 </html>
