--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <body>
 <script src="jquery-3.5.1.min.js"</script>
 <script>
-  $.post("index.php", function(data) {
-    console.log(data);
+  $.ajax({
+    url: "index.php",
+    success: function(result) {
+      console.log(result);
+    }});
   });
 </script>
 </body>
