--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<script src="jquery-3.5.1.min.js"</script>
+<script src="jquery-3.5.1.min.js"></script>
 <script>
   $.ajax({
     url: "index.php",
