--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <script src="jquery-3.5.1.min.js"></script>
 <script>
   $.ajax({
+    type: "POST",
     url: "index.php",
     success: function(result) {
       console.log(result);
