--- a/index.html
+++ b/index.html
@@ -2,12 +2,8 @@
 <body>
 <script src="jquery-3.5.1.min.js"></script>
 <script>
-  $.ajax({
-    type: "POST",
-    url: "index.php",
-    success: function(result) {
-      console.log(result);
-    }
+  $.post("index.php", function(data) {
+    console.log(data);
   });
 </script>
 </body>
